--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -345,8 +345,8 @@
 							labelDisplayFunction="getDominoFieldKeyWordUISytle" showTooltipFunction="getDominoFieldTooltip"
                             listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
 							
-					 <forms:TextForm id="numberColumns" label="Number of columns:" restrict="0-9" textProperty="numberColumns" 
-				bindableText=""/> 
+					 <forms:TextForm id="numberColumnsinput" label="Number of columns:" restrict="0-9" textProperty="numberColumns" 
+				bindableText="" /> 
 		<forms:ToggleButtonSelectedForm label="Refresh fields on keywoed change" textProperty="recalonchange" id="recalonchange"/>
 		<forms:ToggleButtonSelectedForm label="Refresh choices on document refresh" textProperty="recalcchoices" id="recalcchoices"/>			
 		<forms:DominoTextInformationForm label="Checkbox key" textProperty="keywords" prompt="Label|Value"/>
