--- a/src/view/ComponentsOrganizer.mxml
+++ b/src/view/ComponentsOrganizer.mxml
@@ -51,7 +51,11 @@
 			
 			public function loadFirstData(surface:EditingSurface):void
 			{
+				if(surface==null){
+					Alert.show("surface is null");
+				}
 				var tmpArr:Array = getComponentsChildren(surface);
+				
 				tree.rootContainer = (tmpArr[0] as OrganizerItem).item as IVisualElementContainer;
 				components = new ArrayCollection(tmpArr);
 				tmpArr = null;
@@ -395,7 +399,10 @@
 				if(surface==null){
 					Alert.show("surface is null");
 				}
+				
+				
 				if(surface.numChildren>0){
+				
 					var element:ISurfaceComponent = surface.getElementAt(0) as ISurfaceComponent;
 					
 			
@@ -425,8 +432,9 @@
 					
 					for (var i:int = 0; i < elementCount; i++)
 					{
-						element = container.getElementAt(i) as ISurfaceComponent;
 						
+						element = container.getElementAt(i) as ISurfaceComponent;
+					
 						if (element === null)
 						{
 							continue;
@@ -438,6 +446,7 @@
 						if(editingSurface.isVisualEditorDomino){
 							//Alert.show("getComponentsChildren:438");
 							domino_element = element as IDominoSurfaceComponent;
+							if(domino_element)
 							organizerItem = domino_element.getComponentsChildren();
 						}else{
 							primeface_element = element as IPrimeFacesSurfaceComponent;
@@ -451,6 +460,7 @@
 				}else{
 					return [new OrganizerItem(surface, "Stage", [])];	
 				}
+				
 			}
 			
 			private function findItemInDepth(items:Array, ownerComponent:IVisualElement, isRoot:Boolean=true, topParent:Object=null):void
